--- a/PAGES/7b_benchmarks/index.html
+++ b/PAGES/7b_benchmarks/index.html
@@ -637,7 +637,7 @@ section a:hover{
                             <td class="tg-ofj5">1</td>
                         </tr>
                         <tr>
-                            <td class="tg-8jgo">Miliseconds</td>
+                            <td class="tg-8jgo">Milliseconds</td>
                             <td class="tg-ofj5">ms</td>
                             <td class="tg-ofj5">10<sup>-3</sup></td>
                         </tr>
@@ -2547,7 +2547,7 @@ color: white;
     <td class="tg-ofj5">1</td>
   </tr>
   <tr>
-      <td class="tg-8jgo">Miliseconds</td>
+      <td class="tg-8jgo">Milliseconds</td>
     <td class="tg-ofj5"><code>ms</code></td>
     <td class="tg-ofj5">\(10^{-3}\)</td>    
   </tr>
@@ -2630,7 +2630,7 @@ x &#61; 1:100
     </div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Notice that both macros append the symbol <code>&#36;</code> to the variable <code>x</code>. The notation is necesary to indicate that <code>x</code> shouldn&#39;t be interpreted as a global variable. This is actually the case when the variable is passed to a function. As we&#39;ll exclusively benchmark functions, you should always add <code>&#36;</code> to each variable—<strong>omitting</strong> <code>&#36;</code> <strong>would lead to inaccurate results</strong>.</p>
+<p>Notice that both macros append the symbol <code>&#36;</code> to the variable <code>x</code>. The notation is necessary to indicate that <code>x</code> shouldn&#39;t be interpreted as a global variable. This is actually the case when the variable is passed to a function. As we&#39;ll exclusively benchmark functions, you should always add <code>&#36;</code> to each variable—<strong>omitting</strong> <code>&#36;</code> <strong>would lead to inaccurate results</strong>.</p>
 <p>The following example demonstrates the consequence of excluding <code>&#36;</code>, wrongly reporting higher times than they really are. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> In fact, <code>sum&#40;x&#41;</code> doesn&#39;t allocate memory, unlike what&#39;s reported without <code>&#36;</code>.  </span></span></p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
