--- a/PAGES/9f_lazy/index.html
+++ b/PAGES/9f_lazy/index.html
@@ -637,7 +637,7 @@ section a:hover{
                             <td class="tg-ofj5">1</td>
                         </tr>
                         <tr>
-                            <td class="tg-8jgo">Miliseconds</td>
+                            <td class="tg-8jgo">Milliseconds</td>
                             <td class="tg-ofj5">ms</td>
                             <td class="tg-ofj5">10<sup>-3</sup></td>
                         </tr>
@@ -2508,8 +2508,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Computations can be categorized as either &quot;lazy&quot; or &quot;eager&quot;. <span style="color: rgb(62, 121, 180);"><strong>Lazy operations</strong></span> only define the code to be executed, without generating the output immediately. They&#39;re a form to defer computation. In contrast, <span style="color: rgb(62, 121, 180);"><strong>eager operations</strong></span> are executed as soon as they&#39;re defined, providing instant access to the results. So far, most of the operations performed on this website have fallen into the eager category.</p>
-<p>Lazy operations can significantly boost performance, especially when applied to intermediate computations. This stems from two factors. Firstly, lazy evaluation enables Julia to <strong>sidestep unnecessary memory allocations</strong>. By deferring computations until they&#39;re actually needed, Julia is able to perform calculations on the fly and feed them directly into the final computations. Secondly, lazy operations facilitate <strong>the fusing of operations</strong>, a process that combines multiple operations into a single more efficient one. This provides Julia with a comprehensive view of the intended operation, allowing it to implement optimized approaches.</p>
+<p>Computations can be categorized as either &quot;lazy&quot; or &quot;eager&quot;. <span style="color: rgb(62, 121, 180);"><strong>Lazy operations</strong></span> only define the code to be executed, without generating the output immediately. They&#39;re a form of deferring computation. In contrast, <span style="color: rgb(62, 121, 180);"><strong>eager operations</strong></span> are executed as soon as they&#39;re defined, providing instant access to the results. So far, most of the operations performed on this website have fallen into the eager category.</p>
+<p>Lazy operations can significantly boost performance, especially when applied to intermediate computations. This stems from two factors. First, lazy evaluation enables Julia to <strong>sidestep unnecessary memory allocations</strong>. By deferring computations until they&#39;re actually needed, Julia is able to perform calculations on the fly and feed them directly into the final computations. Secondly, lazy operations facilitate <strong>fusing operations</strong>, a process that combines multiple operations into a single more efficient one. This provides Julia with a comprehensive view of the intended operation, allowing it to implement optimized approaches.</p>
 <p>      </div>
     </div>
   </div>
@@ -2521,7 +2521,7 @@ color: white;
         <h2>Generators</h2></p>
 <p><span style="color: rgb(62, 121, 180);"><strong>Generators</strong></span> are <strong>a lazy alternative to array comprehensions</strong> that create arrays by iterating over values. Unlike array comprehensions, which eagerly compute and store all the elements in memory, generators defer the computation of values until they&#39;re required.</p>
 <p>Generators share the same syntax as array comprehensions, except they&#39;re enclosed in parentheses <code>&#40; &#41;</code> instead of square brackets <code>&#91; &#93;</code>. They also maintain the same flexibility as array comprehensions, including the ability to add conditions and iterate simultaneously over multiple collections.</p>
-<p>Below, we exemplify how to define generators, which formally define an object with type <code>Base.Generator</code>.</p>
+<p>Below, we demonstrate how to define generators, which formally define an object with type <code>Base.Generator</code>.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
