--- a/PAGES/8b_TS-globalVariables/index.html
+++ b/PAGES/8b_TS-globalVariables/index.html
@@ -637,7 +637,7 @@ section a:hover{
                             <td class="tg-ofj5">1</td>
                         </tr>
                         <tr>
-                            <td class="tg-8jgo">Miliseconds</td>
+                            <td class="tg-8jgo">Milliseconds</td>
                             <td class="tg-ofj5">ms</td>
                             <td class="tg-ofj5">10<sup>-3</sup></td>
                         </tr>
@@ -2508,11 +2508,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p><span style="color: rgb(62, 121, 180);"><strong>Global variables</strong></span> can be accessed and modified anywhere in the code. In contrast, <span style="color: rgb(62, 121, 180);"><strong>local variables</strong></span> are only accessible within a specific scope &#40;e.g., in a function or a loop&#41;. </p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Global variables</strong></span> can be accessed and modified anywhere in the code. In contrast, <span style="color: rgb(62, 121, 180);"><strong>local variables</strong></span> are only accessible within a specific scope &#40;e.g., in a function or a loop&#41;. In particular, we&#39;ll exclusively refer to local variables as those in relation to a function&#39;s scope, which encompass both function arguments and variables defined inside the function.</p>
 <p><strong>Operations with global variables are a common source of type instability</strong>: since they can be redefined at any point, Julia treats them as having type <code>Any</code>. This type ambiguity explains why performing operations in the global scope is slow—the compiler has to consider multiple possible methods for each operation, precluding specialization.</p>
 <p>This section explores two approaches to making operations with global variables type-stable: type-annotating global variables and declaring global variables as constants. The latter approach is particularly convenient for variables that remain unmodified throughout the script, like <code>π &#61; 3.1415926535897</code>.</p>
- <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Local Variables</strong>  </span>  </div>  <div class=content> <strong>We'll exclusively refer to local variables in relation to a function's scope</strong>. They encompass both function arguments and variables defined inside the function.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2522,7 +2520,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>When Are We Using Global Variables?</h2></p>
-<p>Self-contained functions are those relying solely on their arguments and locally defined variables, without any dependency on global variables. The first tab below shows an example of a self-contained function. In contrast, the subsequent two tables illustrate scenarios using global variables. They showcase a function employing variables defined outside its scope and operations performed in the global scope. </p>
+<p>Self-contained functions are those relying solely on their arguments and locally defined variables, without any dependency on global variables. The first tab below shows an example of a self-contained function. In contrast, the subsequent two tabs illustrate scenarios using global variables. They showcase a function employing variables defined outside its scope and operations performed in the global scope. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2568,13 +2566,13 @@ z &#61; log&#40;y&#41;</code></pre> </div></div>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Achieving Type Stability With Global Variables</h2></p>
-<p>Working with global variables is a practice often discouraged in modern programming paradigms, and additionally affects performance by turning operations type unstable. However, there are some scenarios where global variables could come in handy. In that case, there are two approaches addressing the performance issue: setting a global variable as a constant or annotating it with a concrete type. </p>
-<p>Note, nonetheless, that writing self-contained functions should be the first option to consider. Aside performance considerations, these functions maintain the code modular and easier to understand, without the need to track global variables across the script to discern its purpose.</p>
+<p>Working with global variables is a practice often discouraged in modern programming paradigms, which additionally affects performance by turning operations type unstable. However, there are some scenarios where global variables could come in handy. In that case, there are two approaches addressing the performance issue: setting a global variable as a constant or annotating it with a concrete type. </p>
+<p>Note, nonetheless, that writing self-contained functions should be the first option to consider. Aside from performance considerations, these functions maintain the code modular and easier to understand, without the need to track global variables across the script to discern their purpose.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> - You Should Still Wrap Code in a Function </span>  </div>  <div class=content>     Keep in mind that <strong>functions implement additional optimizations</strong> that aren&#39;t possible in the global scope. Due to this, even if you implement the fixes for global variables that we propose in this section, you should additionally rely on functions when you care about performance.  </div>  </div>
  <h4> Constant Global Variables </h4>
-<p>Declaring a global variable as a constant requires adding the keyword <code>const</code> before the variable&#39;s name, such as <code>const x &#61; 3</code>. We can declare any variable as a constant, including vectors, as the following examples show.</p>
+<p>Declaring a global variable as a constant requires adding the keyword <code>const</code> before the variable&#39;s name, such as <code>const x &#61; 3</code>. Any variable can be declared as a constant, including vectors, as the following examples show.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2592,10 +2590,10 @@ foo&#40;&#41;   &#61; sum&#40;b&#41;
 @code_warntype foo&#40;&#41;        # type stable</code></pre> </div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>A constant global variable doesn&#39;t incur the performance penalties of using a global variable. However, it&#39;s worth remarking that <strong>you should declare a global variable as a constant only if its value won't change throughout the script</strong>. In other words, the global variable should be a truly constant, such as the value \(\pi := 3.1415\). Reassigning the value of a constant at some point in the script will lead to silent bugs. </p>
+<p>A constant global variable doesn&#39;t incur the performance penalties of using a global variable. However, it&#39;s worth remarking that <strong>you should declare a global variable as a constant only if its value won't change throughout the script</strong>. In other words, the global variable should be truly constant, such as the value \(\pi := 3.1415\). Reassigning the value of a constant at some point in the script will lead to silent bugs. </p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content> <strong>If you have to modify the value of a constant global variable, change the definition of the constant and then re-run the entire script.</strong> Redefining the value later in the code will trigger a warning in the REPL. The reason is that functions defined earlier in the code will still rely on the constant&#39;s original value. It&#39;s only if you rerun the whole script that changes will take effect </p>
+      <b>Warning!</b> </span>  </div>  <div class=content> <strong>If you have to modify the value of a constant global variable, change the definition of the constant and then re-run the entire script.</strong> Redefining the value later in the code will trigger a warning in the REPL. The reason is that functions defined earlier in the code will still rely on the constant&#39;s original value. Only if you rerun the whole script will changes take effect </p>
 <p>To illustrate it, compare the following code snippets. Both execute the function <code>foo</code> for a constant value of <code>x&#61;1</code>, and then for a value of <code>x&#61;2</code>. The first tab shows the consequences of a script including two different constant values for <code>x</code>, where the value returned by <code>foo</code> is still based on <code>x &#61; 1</code>. On the contrary, rerunning the entire script based on a new value for <code>x</code> circumvents the issue, as demonstrated in the second tab.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2621,7 +2619,7 @@ foo&#40;&#41;             # it gives 2</code></pre>
 <p>  </p></details></div>
 <p>Redefining constants was introduced to facilitate code testing, as the user doesn&#39;t need to start a new Julia session for each new constant value. Despite this, you should be cautious when doing so.  </div>  </div>
  <h4> Type-Annotating a Global Variable </h4>
-<p>The second approach to ensure type stability is by specifying a global variable&#39;s type. This is done by including the operator <code>::</code> after the variable&#39;s name, such as <code>x::Int64</code>. Relative to <code>const</code>, this approach enables you to reassign global variable without unexpected consequences, as <code>::</code> only affects the type of the variable, not its value.</p>
+<p>The second approach to ensure type stability is by specifying a global variable&#39;s type. This is done by including the operator <code>::</code> after the variable&#39;s name, such as <code>x::Int64</code>. Compared to <code>const</code>, this approach enables you to reassign global variable without unexpected consequences, as <code>::</code> only affects the type of the variable, not its value.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2644,8 +2642,8 @@ foo&#40;&#41;          # type stable</code></pre>
  </div></div>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
-      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Type-annotating a function argument doesn't improve performance</strong>  </span>  </div>  <div class=content>     Type-annotating function arguments is commonly done when packages are written. The goal is to ensure that the function only accepts arguments with a specific type. By doing so, the developer shields the user from getting an output despite passing variables with wrong types. </p>
-<p>For instance, <code>*</code> applied to strings in Julia would concatenate words. Thus, if we want to define a function whose aim is to multiple numbers, a way to prevent its misuse by users is by restricting the operation to numeric types.</p>
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Type-annotating a function argument doesn't improve performance</strong>  </span>  </div>  <div class=content>     Type-annotating function arguments is commonly done when packages are written. The goal is to ensure that the function accepts only arguments with a specific type. By doing so, the developer shields the user from getting an output despite passing variables with wrong types. </p>
+<p>For instance, <code>*</code> applied to strings in Julia will concatenate words. Thus, if we want to define a function to multiple numbers, a way to prevent misuses is by restricting the operation to numeric types.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
