--- a/PAGES/8a_TS-definition/index.html
+++ b/PAGES/8a_TS-definition/index.html
@@ -2538,13 +2538,13 @@ color: white;
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; &#91;1, 2, &quot;hello&quot;&#93;            # &#96;x&#96; has type &#96;Vector&#123;Any&#125;&#96;
 
 @btime sum&#40;&#36;x&#91;1:2&#93;&#41;            # type UNSTABLE</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat"><pre><code class="plaintext code-output">  29.819 ns (1 allocation: 64 bytes)
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat"><pre><code class="plaintext code-output">  29.920 ns (1 allocation: 64 bytes)
 </code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; &#91;1, 2, 3&#93;                  # &#96;x&#96; has type &#96;Vector&#123;Int64&#125;&#96;
 
 @btime sum&#40;&#36;x&#91;1:2&#93;&#41;            # type stable</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat"><pre><code class="plaintext code-output">  16.016 ns (1 allocation: 80 bytes)
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="franklin_output_NoFormat"><pre><code class="plaintext code-output">  16.416 ns (1 allocation: 80 bytes)
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
@@ -2635,15 +2635,15 @@ sum&#40;x3&#41;             # type stable</code></pre> </div></div>
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x4::BitVector       &#61; &#91;true, false, true&#93;
 
-all&#40;x4&#41;             # type stable &#40;&#96;all&#96; checks whether all arguments are &#96;true&#96;&#41;</code></pre> </div></div> 
+all&#40;x4&#41;             # type stable &#40;&#96;all&#96; returns &#96;true&#96; if all arguments are &#96;true&#96;&#41;</code></pre> </div></div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x5::Vector&#123;Number&#125;  &#61; &#91;1, 2, 3&#93;
 
-sum&#40;x5&#41;             # type UNSTABLE -&gt; &#96;sum&#96; considers all the posibilities given by &#96;Number&#96;</code></pre> </div></div> 
+sum&#40;x5&#41;             # type UNSTABLE -&gt; &#96;sum&#96; must consider all possible subtypes of &#96;Number&#96;</code></pre> </div></div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x6::Vector&#123;Any&#125;     &#61; &#91;1, 2, 3&#93;
 
-sum&#40;x6&#41;             # type UNSTABLE -&gt; &#96;sum&#96; considers all the posibilities given by &#96;Any&#96;</code></pre> </div></div> 
+sum&#40;x6&#41;             # type UNSTABLE -&gt; &#96;sum&#96; must consider all possible subtypes of &#96;Any&#96;</code></pre> </div></div> 
  </div></div>
 <p>  </p></details></div>
 <p>As for scalars, recall that only concrete variables can be instantiated, whereas abstract types can&#39;t. As a result, variables passed to a function will always adopt a concrete type, ruling out abstract types like <code>Any</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> However, keep in mind that <code>Vector&#123;Any&#125;</code> is a concrete type, as shown in the previous section.  </span></span> </p>
